--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ repositories {
 }
 
 dependencies {
+	compileJava.inputs.files(processResources)
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.4.2'
