--- a/build.gradle
+++ b/build.gradle
@@ -14,12 +14,14 @@ repositories {
 }
 
 dependencies {
-	compileJava.inputs.files(processResources)
-	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.4.2'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.4.2'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.4.2'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	testImplementation ('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
 
 	//runtimeOnly 'org.postgresql:postgresql'
 	runtimeOnly group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
