--- a/build.gradle
+++ b/build.gradle
@@ -14,12 +14,13 @@ repositories {
 }
 
 dependencies {
-	compileJava.inputs.files(processResources)
-	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.4.2'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.4.2'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.4.2'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail'
+	testImplementation ('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
 
 	//runtimeOnly 'org.postgresql:postgresql'
 	runtimeOnly group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
@@ -31,8 +32,8 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok:1.18.18'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.18'
 
-	compile('io.springfox:springfox-swagger2:2.9.2')
-	compile('io.springfox:springfox-swagger-ui:2.9.2')
+	compile 'io.springfox:springfox-swagger2:2.9.2'
+	compile 'io.springfox:springfox-swagger-ui:2.9.2'
 }
 
 test {
