--- a/build.gradle
+++ b/build.gradle
@@ -17,18 +17,18 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.4.2'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.4.2'
-	implementation 'org.springframework.boot:spring-boot-starter-mail'
-
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail'
 	testImplementation ('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 
-	//runtimeOnly 'org.postgresql:postgresql'
-	runtimeOnly group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
+	runtimeOnly 'org.postgresql:postgresql'
+	//runtimeOnly group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
 	//providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
 	compileOnly 'org.projectlombok:lombok:1.18.18'
 	annotationProcessor 'org.projectlombok:lombok:1.18.18'
+
 	testCompileOnly 'org.projectlombok:lombok:1.18.18'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.18'
 
