--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.jpa.database=mysql
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+management.endpoints.web.exposure.include=*
 
 #spring.jpa.database=postgresql
 #spring.datasource.url=${JDBC_DATABASE_URL}
