--- a/build.gradle
+++ b/build.gradle
@@ -19,13 +19,14 @@ dependencies {
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.4.2'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator:2.4.4'
+	implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
 
 	testImplementation ('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 
-	runtimeOnly 'org.postgresql:postgresql'
-	//runtimeOnly group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
+	//runtimeOnly 'org.postgresql:postgresql'
+	runtimeOnly group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
 	//providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
 	compileOnly 'org.projectlombok:lombok:1.18.18'
