Task-32.3 fix after review

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # ADMINISTRATION
 admin.name=Jola
 admin.mail=jola-w@o2.pl
-admin.good.bye.message=You have 10 minutes to do these tasks :)
+
+# EMAIL TEMPLATE
+admin.good.bye.message=Thank you for reading this message!
 
 #TRELLO CONFIGURATION
 trello.api.endpoint.prod=https://api.trello.com/1
